# drapes

./: .bzrignore  .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  bootshrap.sh  configure.ac  drapes.mds  drapes.userprefs  drapes.vpj  drapes.vpw  tailor.conf
data/: DrapesApplet.server  DrapesApplet.server.in  DrapesApplet.server.in.in  DrapesApplet.xml  Makefile.am  drapes.desktop.in  drapes.glade  drapes.schemas.in
data/images/: Makefile.am  drapes-16.xcf  drapes-22.xcf
debian/: changelog  control  control.dapper  control.edgy  copyright  drapes.install  menu  pixmaps  rules  watch
debian/pixmap/: drapes.xpm
doc/: drapes.xml
docs/: Makefile.in  drapes.xml
drapes/: About.cs  Applet.cs  AppletWidget.cs  AssemblyInfo.cs  AssemblyInfo.cs.in  ConfigMenu.cs  ConfigMenuWidgets.cs  Display.cs  Magic.cs  Main.cs  Makefile.am  Makefile.in  Settings.cs  Traylib.cs  Wallpaper.cs  WpList.cs  drapes.mdp  drapes.pidb  gui.glade.bak
drapes/panelapplet/: BonoboUIVerb.cs  GnomeSharp.PanelAppletFactoryCallbackNative.cs  PanelApplet.cs  PanelAppletBackgroundType.cs  PanelAppletFlags.cs
help/: Makefile.am  drapes.omf.in
help/C/: drapes.xml
help/ca/: ca.po
help/es/: es.po
help/fa/: fa.po
help/fr/: fr.po
help/it/: it.po
help/ko/: ko.po
help/pl/: pl.po
help/pt/: pt.po
help/pt_BR/: pt_BR.po
help/sv/: sv.po
help/tr/: tr.po
help/zh_CN/: zh_CN.po
help/zh_HK/: zh_HK.po
man/: Makefile.am  drapes.1
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  ca.po  cs.po  de.po  drapes.po  drapes.pot  es.po  fa.po  fi.po  fr.po  it.po  kk.po  ko.po  nl.po  pl.po  pt.po  pt_BR.po  sv.po  th.po  tr.po  zh_CN.po  zh_HK.po
scripts/: Makefile.am  drapes.in
