AC_INIT(src/Main.cs)

VERSION="0.4"

AM_INIT_AUTOMAKE(drapes, $VERSION)

AC_PROG_INSTALL

MONO_REQUIRED_VERSION=1.1.15
PKG_CHECK_MODULES(MONO, mono >= $MONO_REQUIRED_VERSION)

GTKSHARP_REQUIRED=2.8
PKG_CHECK_MODULES(GTKSHARP,
	gtk-sharp-2.0 >= $GTKSHARP_REQUIRED \
	gnome-sharp-2.0 >= $GTKSHARP_REQUIRED \
	gnome-vfs-sharp-2.0 >= $GTKSHARP_REQUIRED \
	glade-sharp-2.0 >= $GTKSHARP_REQUIRED \
	gconf-sharp-2.0 >= $GTKSHARP_REQUIRED)
AC_SUBST(GTKSHARP_LIBS)

AC_OUTPUT([
Makefile
drapes/Makefile

])
